# jamb

./: .gitignore  .pre-commit-config.yaml  =2.0  COMMANDS.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  matrix.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: Makefile  conf.py  faq.md  index.md  matrix.html  requirements.txt  troubleshooting.md
docs/_static/: custom.css
docs/api/: cli.rst  config.rst  core.rst  coverage.rst  index.md  matrix.rst  publish.rst  pytest_plugin.rst  storage.rst  yaml_io.rst
docs/getting-started/: index.md  installation.md  quickstart.md  tutorial.md
docs/iec-62304/: index.md  lifecycle.md  overview.md  risk-management.md  safety-classifications.md  traceability.md
docs/user-guide/: ci-cd.md  commands.md  concepts.md  configuration.md  design.md  index.md  publishing.md  pytest-integration.md  yaml-format.md
src/jamb/: __init__.py  yaml_io.py
src/jamb/cli/: __init__.py  commands.py
src/jamb/config/: __init__.py  loader.py
src/jamb/core/: __init__.py  errors.py  models.py
src/jamb/coverage/: __init__.py  serializer.py
src/jamb/doorstop/: __init__.py  discovery.py  reader.py
src/jamb/matrix/: __init__.py  chain_builder.py  column_resolvers.py  generator.py  utils.py
src/jamb/matrix/formats/: __init__.py  csv.py  html.py  json.py  markdown.py  xlsx.py
src/jamb/publish/: __init__.py  document.py  docx_reference.py  formats.py  qmd.py  quarto.py  render.py
src/jamb/publish/assets/: document.qmd.j2  theme.scss  typst-theme.typ
src/jamb/publish/formats/: __init__.py  docx.py  html.py
src/jamb/pytest_plugin/: __init__.py  collector.py  log.py  markers.py  plugin.py
src/jamb/storage/: __init__.py  discovery.py  document_config.py  document_dag.py  graph_builder.py  items.py  reorder.py  test_references.py  validation.py
tests/: conftest.py
tests/integration/: test_cli.py  test_comprehensive.py  test_publish_render.py  test_pytest_plugin.py
tests/unit/: test_breaking.py  test_chain_builder.py  test_check_relationship.py  test_cli_commands.py  test_collector.py  test_column_resolvers.py  test_config_loader.py  test_core_models.py  test_coverage_serializer.py  test_document_config.py  test_doorstop_reader.py  test_graph_builder.py  test_jamb_log.py  test_markers.py  test_matrix_formats.py  test_matrix_generator.py  test_publish_docx.py  test_publish_html.py  test_publish_qmd.py  test_pytest_plugin_collector.py  test_pytest_plugin_log.py  test_pytest_plugin_plugin.py  test_storage_discovery.py  test_storage_document_config.py  test_storage_document_dag.py  test_storage_graph_builder.py  test_storage_items.py  test_storage_reorder.py  test_storage_validation.py  test_stress.py  test_test_references.py  test_yaml_io.py
tutorial/: TUTORIAL.md  pyproject.toml  sample-import.yml
tutorial/haz/: .doorstop.yml  .jamb.yml  HAZ001.yml  HAZ002.yml
tutorial/prj/: .doorstop.yml  .jamb.yml  PRJ001.yml
tutorial/rc/: .doorstop.yml  .jamb.yml  RC001.yml  RC002.yml
tutorial/srs/: .doorstop.yml  .jamb.yml  SRS001.yml  SRS002.yml  SRS003.yml  SRS004.yml  SRS005.yml  SRS006.yml  SRS007.yml  SRS008.yml  SRS009.yml  SRS010.yml  SRS011.yml  SRS012.yml  SRS013.yml  SRS014.yml  SRS015.yml  SRS016.yml  SRS017.yml  SRS018.yml  SRS019.yml  SRS020.yml
tutorial/sys/: .doorstop.yml  .jamb.yml  SYS001.yml  SYS002.yml  SYS003.yml  SYS004.yml  SYS005.yml  SYS006.yml  SYS007.yml  SYS008.yml
tutorial/tests/: test_auth.py  test_data.py  test_monitoring.py
tutorial/un/: .doorstop.yml  .jamb.yml  UN001.yml  UN002.yml  UN003.yml  UN004.yml  UN005.yml
